--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/fhir": "^0.0.40",
     "@types/jasmine": "~5.1.4",
+    "@types/node": "^20.10.1",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.2.0",
