--- a/.drone.yml
+++ b/.drone.yml
@@ -17,3 +17,6 @@ steps:
         from_secret: docker_username
       password:
         from_secret: docker_password
+      platforms:
+        - linux/amd64
+        - linux/arm64
