--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,8 @@ steps:
     settings:
       repo:
         from_secret:  docker_repository
-      tags: [latest]
+      # tags: [latest]
+      auto_tag: true
       username:
         from_secret: docker_username
       password:
